--- a/rea_vue/package.json
+++ b/rea_vue/package.json
@@ -4,23 +4,29 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
   },
   "dependencies": {
     "axios": "^0.26.1",
     "bulma": "^0.9.3",
     "bulma-toast": "^2.4.1",
     "core-js": "^3.8.3",
+    "v-google-translate": "^0.1.10",
     "vue": "^3.2.13",
+    "vue-gtranslate": "^2.0.20",
+    "vue-i18n": "^9.1.9",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@intlify/vue-i18n-loader": "^3.0.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "sass-loader": "^12.0.0",
+    "vue-cli-plugin-i18n": "~2.3.1"
   }
 }
